--- a/polymer-parent/pom.xml
+++ b/polymer-parent/pom.xml
@@ -9,8 +9,15 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>annotations</artifactId>
-   <version>0.1.0-SNAPSHOT</version>
+   <groupId>io.osmosis.polymer</groupId>
+   <artifactId>polymer-parent</artifactId>
 
+   <version>0.1.0-SNAPSHOT</version>
+   <packaging>pom</packaging>
+
+   <modules>
+      <module>annotations</module>
+      <module>core</module>
+   </modules>
 
 </project>
