--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
    <properties>
       <kotlin.version>1.1.2</kotlin.version>
       <java.version>1.8</java.version>
-      <logback.version>1.1.6</logback.version>
+      <logback.version>1.1.10</logback.version>
    </properties>
 
    <dependencies>
@@ -143,6 +143,16 @@
          <scope>test</scope>
       </dependency>
    </dependencies>
+
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.13</version>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
 
    <build>
       <finalName>${project.artifactId}</finalName>
