--- a/polymer-parent/core/pom.xml
+++ b/polymer-parent/core/pom.xml
@@ -53,5 +53,9 @@
          <artifactId>jackson-module-kotlin</artifactId>
          <version>${jackson.version}</version>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter</artifactId>
+      </dependency>
    </dependencies>
 </project>
