renaming demo to CreditInc

--- a/demos/creditInc/invoice-app/pom.xml
+++ b/demos/creditInc/invoice-app/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>invictus-parent</artifactId>
-      <groupId>io.osmosis</groupId>
+      <groupId>io.osmosis.demos</groupId>
+      <artifactId>creditInc-parent</artifactId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
@@ -16,6 +16,11 @@
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>polymer</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
 
