--- a/demos/creditInc/pom.xml
+++ b/demos/creditInc/pom.xml
@@ -10,7 +10,8 @@
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>invictus-parent</artifactId>
+   <groupId>io.osmosis.demos</groupId>
+   <artifactId>creditInc-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
 
@@ -19,7 +20,6 @@
       This demo illustrates how Osmosis can be used in non-trivial scnearios.
    </description>
    <modules>
-      <module>taxonomy</module>
       <module>credit-markup-service</module>
       <module>rate-conversion-service</module>
       <module>isic-lookup-service</module>
