--- a/demos/creditInc/discovery-server/pom.xml
+++ b/demos/creditInc/discovery-server/pom.xml
@@ -3,26 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>platform</artifactId>
-      <groupId>io.osmosis</groupId>
+      <artifactId>creditInc-parent</artifactId>
+      <groupId>io.osmosis.demos</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>io.osmosis.polymer</groupId>
-   <artifactId>polymer-parent</artifactId>
-
+   <artifactId>discovery-server</artifactId>
    <version>0.1.0-SNAPSHOT</version>
-   <packaging>pom</packaging>
-
-   <modules>
-      <module>polymer</module>
-      <module>polymer-spring</module>
-      <module>schema-store</module>
-      <module>schema-store-client</module>
-      <module>schema-store-api</module>
-   </modules>
 
    <dependencies>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-eureka-server</artifactId>
+      </dependency>
    </dependencies>
+
 </project>
