--- a/demos/creditInc/pom.xml
+++ b/demos/creditInc/pom.xml
@@ -15,6 +15,11 @@
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
 
+   <properties>
+      <spring.bom.version>1.1.4.RELEASE</spring.bom.version>
+      <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
+   </properties>
+
    <description>Invictus is an imaginary invoice financing company. They purchase invoices, and
       sell them onto banks, charging a fee for doing so.
       This demo illustrates how Osmosis can be used in non-trivial scnearios.
@@ -24,13 +29,32 @@
       <module>rate-conversion-service</module>
       <module>isic-lookup-service</module>
       <module>invoice-app</module>
+      <module>discovery-server</module>
    </modules>
 
    <dependencies>
       <dependency>
          <groupId>lang.taxi</groupId>
-         <artifactId>annotations</artifactId>
+         <artifactId>taxi-annotations</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>io.spring.platform</groupId>
+            <artifactId>platform-bom</artifactId>
+            <version>${spring.bom.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix</artifactId>
+            <version>${spring.cloud.netflix.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
 </project>
