--- a/polymer-parent/schema-store-api/pom.xml
+++ b/polymer-parent/schema-store-api/pom.xml
@@ -3,30 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <groupId>io.osmosis.demos</groupId>
-      <artifactId>creditInc-parent</artifactId>
+      <groupId>io.osmosis.polymer</groupId>
+      <artifactId>polymer-parent</artifactId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>invoice-app</artifactId>
+   <artifactId>schema-store-api</artifactId>
    <version>0.1.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
+         <groupId>com.github.zafarkhaja</groupId>
+         <artifactId>java-semver</artifactId>
+         <version>0.9.0</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <groupId>org.springframework</groupId>
+         <artifactId>spring-webmvc</artifactId>
+         <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-netflix-core</artifactId>
       </dependency>
+
    </dependencies>
 
 </project>
