--- a/polymer-parent/schema-store-client/pom.xml
+++ b/polymer-parent/schema-store-client/pom.xml
@@ -3,19 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <groupId>io.osmosis.demos</groupId>
-      <artifactId>creditInc-parent</artifactId>
+      <groupId>io.osmosis.polymer</groupId>
+      <artifactId>polymer-parent</artifactId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>invoice-app</artifactId>
+   <artifactId>schema-store-client</artifactId>
    <version>0.1.0-SNAPSHOT</version>
+
 
    <dependencies>
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-web</artifactId>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>schema-store-api</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
@@ -23,10 +25,9 @@
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <groupId>io.projectreactor</groupId>
+         <artifactId>reactor-core</artifactId>
+         <version>3.0.7.RELEASE</version>
       </dependency>
    </dependencies>
-
 </project>
