--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
    <modules>
-      <module>demos/invictus</module>
+      <module>demos/creditInc</module>
       <module>polymer-parent</module>
    </modules>
 
@@ -23,6 +23,7 @@
       <kotlin.version>1.1.2</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
+      <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
    </properties>
 
    <dependencies>
@@ -138,6 +139,12 @@
          <scope>test</scope>
       </dependency>
       <dependency>
+         <groupId>com.nhaarman</groupId>
+         <artifactId>mockito-kotlin</artifactId>
+         <version>1.3.0</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <scope>test</scope>
@@ -147,9 +154,11 @@
    <dependencyManagement>
       <dependencies>
          <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.13</version>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix</artifactId>
+            <version>${spring.cloud.netflix.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
          </dependency>
       </dependencies>
    </dependencyManagement>
