--- a/demos/creditInc/discovery-server/pom.xml
+++ b/demos/creditInc/discovery-server/pom.xml
@@ -17,6 +17,15 @@
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-eureka-server</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
+      <dependency>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>polymer-spring-schemaStore</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
    </dependencies>
 
 </project>
