--- a/demos/creditInc/invoice-app/pom.xml
+++ b/demos/creditInc/invoice-app/pom.xml
@@ -18,6 +18,10 @@
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-eureka</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer</artifactId>
          <version>0.1.0-SNAPSHOT</version>
