--- a/polymer-parent/polymer-spring-schemaStore/pom.xml
+++ b/polymer-parent/polymer-spring-schemaStore/pom.xml
@@ -3,26 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <groupId>io.osmosis.polymer</groupId>
       <artifactId>polymer-parent</artifactId>
+      <groupId>io.osmosis.polymer</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>schema-store-api</artifactId>
+   <artifactId>polymer-spring-schemaStore</artifactId>
    <version>0.1.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
-         <groupId>org.springframework</groupId>
-         <artifactId>spring-webmvc</artifactId>
-         <scope>provided</scope>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>schema-store</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
       </dependency>
-      <dependency>
-         <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-netflix-core</artifactId>
-      </dependency>
-
    </dependencies>
-
 </project>
