--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,11 @@
    <dependencyManagement>
       <dependencies>
          <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-core</artifactId>
+            <version>3.0.7.RELEASE</version>
+         </dependency>
+         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-netflix</artifactId>
             <version>${spring.cloud.netflix.version}</version>
