--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
    </parent>
 
    <properties>
-      <kotlin.version>1.1.2</kotlin.version>
+      <kotlin.version>1.1.4-3</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
