--- a/polymer-parent/vyne-studio/package.json
+++ b/polymer-parent/vyne-studio/package.json
@@ -13,17 +13,18 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.6",
-    "@angular/cdk": "2.0.0-beta.8",
+    "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
+    "@angular/flex-layout": "^2.0.0-beta.9",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
-    "@angular/material": "2.0.0-beta.8",
+    "@angular/material": "^2.0.0-beta.10",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
-    "@covalent/core": "^1.0.0-beta.6",
+    "@covalent/core": "^1.0.0-beta.7",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
