--- a/polymer-parent/polymer-spring/pom.xml
+++ b/polymer-parent/polymer-spring/pom.xml
@@ -16,7 +16,6 @@
       <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-context</artifactId>
-         <version>4.3.8.RELEASE</version>
          <scope>provided</scope>
       </dependency>
       <dependency>
@@ -47,6 +46,16 @@
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
          <version>3.0.7.RELEASE</version>
+      </dependency>
+      <dependency>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>schema-store-api</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+         <groupId>com.hazelcast</groupId>
+         <artifactId>hazelcast</artifactId>
+         <scope>optional</scope>
       </dependency>
       <dependency>
          <groupId>com.jayway.jsonpath</groupId>
