--- a/demos/helloWorld/vyne-query-service/pom.xml
+++ b/demos/helloWorld/vyne-query-service/pom.xml
@@ -25,5 +25,10 @@
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-eureka</artifactId>
       </dependency>
+
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-devtools</artifactId>
+      </dependency>
    </dependencies>
 </project>
