--- a/polymer-parent/angular4-seed/package.json
+++ b/polymer-parent/angular4-seed/package.json
@@ -26,17 +26,32 @@
 		"@angular/platform-browser": "^4.4.4",
 		"@angular/platform-browser-dynamic": "^4.4.4",
 		"@angular/router": "^4.4.4",
+		"@covalent/code-editor": "^1.0.0-beta.2",
+		"@covalent/core": "1.0.0-beta.7",
+		"@covalent/dynamic-forms": "1.0.0-beta.7",
+		"@covalent/highlight": "1.0.0-beta.7",
+		"@covalent/http": "1.0.0-beta.7",
+		"@covalent/markdown": "1.0.0-beta.7",
 		"@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
+		"@swimlane/ngx-charts": "^5.3.0",
+		"@swimlane/ngx-charts-dag": "git://github.com/swimlane/ngx-charts-dag#3672159e830ca468dbf548eb10a442ea3c31a505",
+		"@swimlane/ngx-datatable": "^10.4.0",
+		"@types/lodash": "^4.14.80",
+		"angular-in-memory-web-api": "^0.5.1",
 		"bootstrap": "4.0.0-beta",
 		"core-js": "^2.5.1",
 		"css-loader": "^0.28.7",
+		"d3": "^4.9.0",
 		"hammerjs": "^2.0.8",
+		"highlight.js": "9.10.0",
 		"intl": "^1.2.5",
 		"jquery": "^3.2.1",
+		"lodash": "^4.17.4",
 		"material-design-iconic-font": "^2.2.0",
 		"material-design-icons": "^3.0.1",
 		"mdi": "^2.0.46",
 		"multi-brand-colors": "^1.1.3",
+		"ng2-search-filter": "^0.3.1",
 		"ngu-utility": "^1.0.3",
 		"ngx-malihu-scrollbar": "^1.2.1",
 		"rxjs": "^5.4.3",
