--- a/polymer-parent/schema-store/pom.xml
+++ b/polymer-parent/schema-store/pom.xml
@@ -38,7 +38,7 @@
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
-         <artifactId>grammar</artifactId>
+         <artifactId>compiler</artifactId>
          <version>0.1.0-SNAPSHOT</version>
          <exclusions>
             <exclusion>
