pre material -beta.12 upgrade

--- a/polymer-parent/angular4-seed/package.json
+++ b/polymer-parent/angular4-seed/package.json
@@ -27,11 +27,11 @@
 		"@angular/platform-browser-dynamic": "^4.4.4",
 		"@angular/router": "^4.4.4",
 		"@covalent/code-editor": "^1.0.0-beta.2",
-		"@covalent/core": "1.0.0-beta.7",
-		"@covalent/dynamic-forms": "1.0.0-beta.7",
-		"@covalent/highlight": "1.0.0-beta.7",
-		"@covalent/http": "1.0.0-beta.7",
-		"@covalent/markdown": "1.0.0-beta.7",
+		"@covalent/core": "1.0.0-beta.8-1",
+		"@covalent/dynamic-forms": "1.0.0-beta.8-1",
+		"@covalent/highlight": "1.0.0-beta.8-1",
+		"@covalent/http": "1.0.0-beta.8-1",
+		"@covalent/markdown": "1.0.0-beta.8-1",
 		"@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.3",
 		"@swimlane/ngx-charts": "^5.3.0",
 		"@swimlane/ngx-charts-dag": "git://github.com/swimlane/ngx-charts-dag#3672159e830ca468dbf548eb10a442ea3c31a505",
