--- a/polymer-parent/angular4-seed/package.json
+++ b/polymer-parent/angular4-seed/package.json
@@ -15,20 +15,20 @@
 	"dependencies": {
 		"@agm/core": "^1.0.0-beta.1",
 		"@angular/animations": "^4.4.4",
-		"@angular/cdk": "2.0.0-beta.11",
+		"@angular/cdk": "2.0.0-beta.12",
 		"@angular/common": "^4.4.4",
 		"@angular/compiler": "^4.4.4",
 		"@angular/core": "^4.4.4",
 		"@angular/flex-layout": "^2.0.0-rc.1",
 		"@angular/forms": "^4.4.4",
 		"@angular/http": "^4.4.4",
-		"@angular/material": "2.0.0-beta.11",
+		"@angular/material": "2.0.0-beta.12",
 		"@angular/platform-browser": "^4.4.4",
 		"@angular/platform-browser-dynamic": "^4.4.4",
 		"@angular/router": "^4.4.4",
 		"@covalent/code-editor": "^1.0.0-beta.2",
 		"@covalent/core": "1.0.0-beta.8-1",
-		"@covalent/dynamic-forms": "1.0.0-beta.8-1",
+		"@covalent/dynamic-forms": "^1.0.0-beta.8-1",
 		"@covalent/highlight": "1.0.0-beta.8-1",
 		"@covalent/http": "1.0.0-beta.8-1",
 		"@covalent/markdown": "1.0.0-beta.8-1",
@@ -38,6 +38,7 @@
 		"@swimlane/ngx-datatable": "^10.4.0",
 		"@types/lodash": "^4.14.80",
 		"angular-in-memory-web-api": "^0.5.1",
+		"angular-tree-component": "^5.1.2",
 		"bootstrap": "4.0.0-beta",
 		"core-js": "^2.5.1",
 		"css-loader": "^0.28.7",
