--- a/polymer-parent/angular4-seed/package.json
+++ b/polymer-parent/angular4-seed/package.json
@@ -55,6 +55,7 @@
 		"ng2-search-filter": "^0.3.1",
 		"ngu-utility": "^1.0.3",
 		"ngx-malihu-scrollbar": "^1.2.1",
+		"nl2br-pipe": "^0.1.0",
 		"rxjs": "^5.4.3",
 		"ts-helper": "0.0.1",
 		"web-animations-js": "^2.3.1",
