--- a/.gitignore
+++ b/.gitignore
@@ -54,7 +54,7 @@ jspm_packages
 
 ## Directory-based project format:
 .idea/
-# if you remove the above rule, at least ignore the following:
+# if you remove the above expectedException, at least ignore the following:
 
 # User-specific stuff:
 # .idea/workspace.xml
