--- a/polymer-parent/vyne-query-service/src/main/resources/application.yml
+++ b/polymer-parent/vyne-query-service/src/main/resources/application.yml
@@ -10,7 +10,12 @@ logging:
   level:
       io.polymer: DEBUG
       io.osmosis: DEBUG
-ribbon:
-   ServerListRefreshInterval: 1000
-   restclient:
-      enabled: true
+eureka:
+   client:
+      registryFetchIntervalSeconds: 1
+      initialInstanceInfoReplicationIntervalSeconds: 5
+      serviceUrl:
+         defaultZone: ${eureka.uri:http://127.0.0.1:8761}/eureka/
+   instance:
+      leaseRenewalIntervalInSeconds: 2
+      leaseExpirationDurationInSeconds: 5
