--- a/polymer-parent/polymer-spring/pom.xml
+++ b/polymer-parent/polymer-spring/pom.xml
@@ -43,6 +43,10 @@
          <artifactId>spring-cloud-starter-feign</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-commons</artifactId>
+      </dependency>
+      <dependency>
          <groupId>io.projectreactor</groupId>
          <artifactId>reactor-core</artifactId>
          <version>3.0.7.RELEASE</version>
