--- a/polymer-parent/polymer/pom.xml
+++ b/polymer-parent/polymer/pom.xml
@@ -49,10 +49,12 @@
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-core</artifactId>
+         <version>${jackson.version}</version>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
+         <version>${jackson.version}</version>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.module</groupId>
