--- a/polymer-parent/pom.xml
+++ b/polymer-parent/pom.xml
@@ -15,6 +15,9 @@
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
 
+   <properties>
+      <jackson.version>2.9.3</jackson.version>
+   </properties>
    <modules>
       <module>polymer</module>
       <module>polymer-spring</module>
