--- a/pom.xml
+++ b/pom.xml
@@ -20,16 +20,18 @@
    </parent>
 
    <properties>
-      <kotlin.version>1.1.51</kotlin.version>
+      <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
+      <kotlin.version>1.2.10</kotlin.version>
       <java.version>1.8</java.version>
       <logback.version>1.1.10</logback.version>
       <spring.cloud.netflix.version>1.3.0.RELEASE</spring.cloud.netflix.version>
+      <jackson.version>2.9.3</jackson.version>
    </properties>
 
    <dependencies>
       <dependency>
          <groupId>org.jetbrains.kotlin</groupId>
-         <artifactId>kotlin-stdlib</artifactId>
+         <artifactId>kotlin-stdlib-jdk8</artifactId>
          <version>${kotlin.version}</version>
       </dependency>
       <dependency>
@@ -164,6 +166,26 @@
             <version>${spring.cloud.netflix.version}</version>
             <type>pom</type>
             <scope>import</scope>
+         </dependency>
+         <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>${jackson.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
          </dependency>
       </dependencies>
    </dependencyManagement>
