--- a/polymer-parent/schema-store-client/pom.xml
+++ b/polymer-parent/schema-store-client/pom.xml
@@ -15,6 +15,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>org.funktionale</groupId>
+         <artifactId>funktionale-all</artifactId>
+         <version>1.2</version>
+      </dependency>
+      <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>schema-store-api</artifactId>
          <version>0.1.0-SNAPSHOT</version>
