--- a/demos/trade-compliance/rules-provider/pom.xml
+++ b/demos/trade-compliance/rules-provider/pom.xml
@@ -35,5 +35,38 @@
          <artifactId>polymer-spring</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
+      <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>taxi-annotation-processor</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
+
    </dependencies>
+   <build>
+      <plugins>
+         <plugin>
+            <artifactId>kotlin-maven-plugin</artifactId>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <version>${kotlin.version}</version>
+            <executions>
+               <execution>
+                  <id>kapt</id>
+                  <goals>
+                     <goal>kapt</goal>
+                  </goals>
+                  <configuration>
+                     <annotationProcessorPaths>
+                        <annotationProcessorPath>
+                           <groupId>lang.taxi</groupId>
+                           <artifactId>taxi-annotation-processor</artifactId>
+                           <version>0.1.0-SNAPSHOT</version>
+                        </annotationProcessorPath>
+                     </annotationProcessorPaths>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
+
+      </plugins>
+   </build>
 </project>
