--- a/polymer-parent/vyne-app/angular.json
+++ b/polymer-parent/vyne-app/angular.json
@@ -30,6 +30,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
+              "node_modules/highlight.js/styles/vs.css",
               "src/styles.scss"
             ],
             "scripts": []
