--- a/demos/trade-compliance/rules-provider/pom.xml
+++ b/demos/trade-compliance/rules-provider/pom.xml
@@ -40,7 +40,10 @@
          <artifactId>taxi-annotation-processor</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
-
+      <dependency>
+         <groupId>com.fasterxml.jackson.module</groupId>
+         <artifactId>jackson-module-kotlin</artifactId>
+      </dependency>
    </dependencies>
    <build>
       <plugins>
