--- a/polymer-parent/polymer/pom.xml
+++ b/polymer-parent/polymer/pom.xml
@@ -18,6 +18,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>io.osmosis.polymer</groupId>
+         <artifactId>vyne-query-api</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>org.skyscreamer</groupId>
          <artifactId>jsonassert</artifactId>
          <version>1.5.0</version>
