update library dependencies given taxi refactor

--- a/polymer-parent/polymer-spring/pom.xml
+++ b/polymer-parent/polymer-spring/pom.xml
@@ -14,6 +14,11 @@
 
    <dependencies>
       <dependency>
+         <groupId>lang.taxi</groupId>
+         <artifactId>taxi-stdlib-annotations</artifactId>
+         <version>0.1.0-SNAPSHOT</version>
+      </dependency>
+      <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-context</artifactId>
          <scope>provided</scope>
