--- a/demos/trade-compliance/feature-test/pom.xml
+++ b/demos/trade-compliance/feature-test/pom.xml
@@ -26,12 +26,12 @@
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>${vyne.version}</version>
       </dependency>
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>${vyne.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
