--- a/demos/trade-compliance/rules-provider/pom.xml
+++ b/demos/trade-compliance/rules-provider/pom.xml
@@ -28,17 +28,17 @@
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>${vyne.version}</version>
       </dependency>
       <dependency>
          <groupId>io.osmosis.polymer</groupId>
          <artifactId>polymer-spring</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>${vyne.version}</version>
       </dependency>
       <dependency>
          <groupId>lang.taxi</groupId>
          <artifactId>taxi-annotation-processor</artifactId>
-         <version>0.1.0-SNAPSHOT</version>
+         <version>${taxi.version}</version>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.module</groupId>
