--- a/polymer-parent/vyne-client-spring/pom.xml
+++ b/polymer-parent/vyne-client-spring/pom.xml
@@ -22,5 +22,9 @@
          <groupId>org.springframework</groupId>
          <artifactId>spring-context</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-commons</artifactId>
+      </dependency>
    </dependencies>
 </project>
