rename maven artifacts from polymer -> vyne

--- a/demos/creditInc/discovery-server/pom.xml
+++ b/demos/creditInc/discovery-server/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>creditInc-parent</artifactId>
-      <groupId>io.osmosis.demos</groupId>
+      <groupId>io.vyne.demos</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
@@ -22,8 +22,8 @@
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring-schemaStore</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring-schemaStore</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
