--- a/vyne-parent/vyne-spring-schemaStore/pom.xml
+++ b/vyne-parent/vyne-spring-schemaStore/pom.xml
@@ -3,24 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>polymer-parent</artifactId>
-      <groupId>io.osmosis.polymer</groupId>
+      <artifactId>vyne-parent</artifactId>
+      <groupId>io.vyne</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>polymer-spring-schemaStore</artifactId>
+   <artifactId>vyne-spring-schemaStore</artifactId>
    <version>0.1.0-SNAPSHOT</version>
 
    <dependencies>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
+         <groupId>io.vyne</groupId>
          <artifactId>schema-store</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
