--- a/demos/creditInc/rate-conversion-service/pom.xml
+++ b/demos/creditInc/rate-conversion-service/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <groupId>io.osmosis.demos</groupId>
+      <groupId>io.vyne.demos</groupId>
       <artifactId>creditInc-parent</artifactId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
@@ -23,13 +23,13 @@
          <artifactId>spring-cloud-starter-eureka</artifactId>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
