--- a/demos/fx-conversion/trade-threshold-service/pom.xml
+++ b/demos/fx-conversion/trade-threshold-service/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>fx-rates-parent</artifactId>
-      <groupId>io.osmosis.demos.fxRates</groupId>
+      <groupId>io.vyne.demos.fxRates</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
@@ -21,13 +21,13 @@
          <artifactId>spring-cloud-starter-eureka</artifactId>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer-spring</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-spring</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
