--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -4,13 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>platform</artifactId>
-      <groupId>io.osmosis</groupId>
+      <groupId>io.vyne</groupId>
       <version>0.1.0-SNAPSHOT</version>
       <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>io.osmosis.demos</groupId>
+   <groupId>io.vyne.demos</groupId>
    <artifactId>demos-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0-SNAPSHOT</version>
