--- a/demos/trade-compliance/feature-test/pom.xml
+++ b/demos/trade-compliance/feature-test/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>trade-compliance-parent</artifactId>
-      <groupId>io.osmosis.demos.trade-compliance</groupId>
+      <groupId>io.vyne.demos.trade-compliance</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
@@ -14,23 +14,23 @@
 
    <dependencies>
       <dependency>
-         <groupId>io.osmosis.demos.trade-compliance</groupId>
+         <groupId>io.vyne.demos.trade-compliance</groupId>
          <artifactId>rule-aggregator</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.demos.trade-compliance</groupId>
+         <groupId>io.vyne.demos.trade-compliance</groupId>
          <artifactId>rules-provider</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>${vyne.version}</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>${vyne.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
