--- a/demos/trade-compliance/pom.xml
+++ b/demos/trade-compliance/pom.xml
@@ -4,12 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>demos-parent</artifactId>
-      <groupId>io.osmosis.demos</groupId>
+      <groupId>io.vyne.demos</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>io.osmosis.demos.trade-compliance</groupId>
+   <groupId>io.vyne.demos.trade-compliance</groupId>
    <artifactId>trade-compliance-parent</artifactId>
    <packaging>pom</packaging>
    <modules>
