--- a/vyne-parent/pom.xml
+++ b/vyne-parent/pom.xml
@@ -4,13 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
       <artifactId>platform</artifactId>
-      <groupId>io.osmosis</groupId>
+      <groupId>io.vyne</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>io.osmosis.polymer</groupId>
-   <artifactId>polymer-parent</artifactId>
+   <artifactId>vyne-parent</artifactId>
 
    <version>0.1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
@@ -20,12 +19,12 @@
       <taxi.version>0.1.1-SNAPSHOT</taxi.version>
    </properties>
    <modules>
-      <module>polymer</module>
-      <module>polymer-spring</module>
+      <module>vyne</module>
+      <module>vyne-spring</module>
       <module>schema-store</module>
       <module>schema-store-client</module>
       <module>schema-store-api</module>
-      <module>polymer-spring-schemaStore</module>
+      <module>vyne-spring-schemaStore</module>
       <module>vyne-query-service</module>
       <module>vyne-client</module>
       <module>vyne-query-api</module>
