--- a/vyne-parent/schema-store-api/pom.xml
+++ b/vyne-parent/schema-store-api/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <groupId>io.osmosis.polymer</groupId>
-      <artifactId>polymer-parent</artifactId>
+      <groupId>io.vyne</groupId>
+      <artifactId>vyne-parent</artifactId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
@@ -23,8 +23,8 @@
          <artifactId>spring-cloud-netflix-core</artifactId>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
    </dependencies>
