--- a/vyne-parent/vyne-spring/pom.xml
+++ b/vyne-parent/vyne-spring/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>polymer-parent</artifactId>
-      <groupId>io.osmosis.polymer</groupId>
+      <artifactId>vyne-parent</artifactId>
+      <groupId>io.vyne</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>polymer-spring</artifactId>
+   <artifactId>vyne-spring</artifactId>
    <version>0.1.0-SNAPSHOT</version>
 
    <dependencies>
@@ -19,8 +19,8 @@
          <scope>provided</scope>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
-         <artifactId>polymer</artifactId>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
       <dependency>
@@ -32,7 +32,7 @@
          <artifactId>java2taxi</artifactId>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
+         <groupId>io.vyne</groupId>
          <artifactId>schema-store-client</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
@@ -50,7 +50,7 @@
          <version>3.0.7.RELEASE</version>
       </dependency>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
+         <groupId>io.vyne</groupId>
          <artifactId>schema-store-api</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
