--- a/vyne-parent/vyne/pom.xml
+++ b/vyne-parent/vyne/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
-      <artifactId>polymer-parent</artifactId>
-      <groupId>io.osmosis.polymer</groupId>
+      <artifactId>vyne-parent</artifactId>
+      <groupId>io.vyne</groupId>
       <version>0.1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>polymer</artifactId>
+   <artifactId>vyne</artifactId>
    <version>0.1.0-SNAPSHOT</version>
 
    <properties>
@@ -18,7 +18,7 @@
 
    <dependencies>
       <dependency>
-         <groupId>io.osmosis.polymer</groupId>
+         <groupId>io.vyne</groupId>
          <artifactId>vyne-query-api</artifactId>
          <version>0.1.0-SNAPSHOT</version>
       </dependency>
