Allow Vyne query-service to run with embedded Eureka.  Better for demos & spiking

--- a/vyne-parent/vyne-query-service/Dockerfile
+++ b/vyne-parent/vyne-query-service/Dockerfile
@@ -4,4 +4,4 @@ COPY target/vyne-query-service.jar /opt/service/
 
 WORKDIR /opt/service/
 
-CMD java $JVM_OPTS -jar -Dspring.profiles.active=${DEPLOYMENT_ENV} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 vyne-query-service.jar
+CMD java $JVM_OPTS -jar -Dspring.profiles.active=${PROFILE} -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 vyne-query-service.jar
