--- a/vyne-parent/vyne-query-service/src/main/resources/application.yml
+++ b/vyne-parent/vyne-query-service/src/main/resources/application.yml
@@ -3,17 +3,13 @@ server:
 spring:
   application:
     name: query-service
-vyne:
-   schemaStore:
-      name: discovery
 logging:
   level:
       io.vyne: DEBUG
-      io.osmosis: DEBUG
 eureka:
    client:
-      registryFetchIntervalSeconds: 1
-      initialInstanceInfoReplicationIntervalSeconds: 5
+#      registryFetchIntervalSeconds: 1
+#      initialInstanceInfoReplicationIntervalSeconds: 5
       serviceUrl:
          defaultZone: ${eureka.uri:http://127.0.0.1:8761}/eureka/
    instance:
